networkpolicy/policies/openshift-infra/cassandra-hawkular-ingress.yml
kind: NetworkPolicy
apiVersion: extensions/v1beta1
metadata:
  name: cassandra-hawkular-ingress
spec:
  podSelector:
    matchLabels:
      metrics-infra: hawkular-cassandra
  ingress:
    - from:
      - podSelector:
          matchLabels:
            metrics-infra: hawkular-metrics
      ports:
        - port: 9042
          protocol: TCP
