networkpolicy/policies/openshift-infra/hawkular-heapster-ingress.yml
kind: NetworkPolicy
apiVersion: extensions/v1beta1
metadata:
  name: hawkular-heapster-ingress
spec:
  podSelector:
    matchLabels:
      metrics-infra: hawkular-metrics
  ingress:
    - from:
      - podSelector:
          matchLabels:
            metrics-infra: heapster
      ports:
        - port: 8443
          protocol: TCP
